<?xml version="1.0" encoding="utf-8"?>

<!-- Root padding is set at runtime from the system-bar insets, so spacing lives on the inner layouts -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/screen_padding_horizontal"
            android:paddingEnd="@dimen/screen_padding_horizontal"
            android:paddingTop="@dimen/screen_padding_vertical"
            android:paddingBottom="@dimen/space_s">

            <TextView
                style="@style/TextStyle.UniversityNavigator.SectionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_2" />

            <TextView
                style="@style/TextStyle.UniversityNavigator.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:text="@string/departments_at" />

            <TextView
                android:id="@+id/universityNameText"
                style="@style/TextStyle.UniversityNavigator.ScreenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:accessibilityHeading="true"
                tools:targetApi="28"
                tools:text="University of Guelph" />

            <TextView
                style="@style/TextStyle.UniversityNavigator.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_s"
                android:text="@string/select_department_hint" />

            <!-- Department options are added from DepartmentActivity using item_department_option.xml -->
            <RadioGroup
                android:id="@+id/departmentRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xl" />

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/screen_padding_horizontal"
        android:paddingEnd="@dimen/screen_padding_horizontal"
        android:paddingTop="@dimen/space_l"
        android:paddingBottom="@dimen/space_l">

        <Button
            android:id="@+id/backButton"
            style="@style/Widget.UniversityNavigator.BackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/space_s"
            android:text="@string/back" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.UniversityNavigator.PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/space_s"
            android:text="@string/next"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd" />

    </LinearLayout>

</LinearLayout>
